--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "bad-mushroom/strava-v3",
     "description": "A php wrapper for working with Strava's V3 API.",
+	"license": "GPL3",
     "authors": [
         {
             "name": "Chris Sprague",
@@ -8,6 +9,12 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
+        "php": ">=5.3.0"
+    },
+	
+	"autoload": {
+        "psr-0" : {
+            "badmushroom\\stravaV3" : "src"
+        }
     }
 }
